--- a/hdlsrc/iverilog_tb/Makefile
+++ b/hdlsrc/iverilog_tb/Makefile
@@ -1,8 +1,8 @@
-wave.vcd: wave
+file.vcd: wave
 	vvp wave
 wave: *.v
 	iverilog -o wave -y ./ *.v
 
 .PHONY: tb
 tb:
-	gtkwave wave.vcd
+	gtkwave file.vcd
