feat: added LFO module.
Signed-off-by: f3rmata <fermata@h2o.moe>

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ matlab/hdlsrc/chorus/dumped_sin.vcd
 matlab/hdlsrc/chorus/wave
 hdlsrc/gowin_prj/ch62_audio_loopback/impl/temp/rtl_parser.result
 hdlsrc/gowin_prj/ch62_audio_loopback/impl/temp/rtl_parser_arg.json
+hdlsrc/gowin_prj/ch62_audio_loopback/impl/gao
